--- a/public/index-pt.html
+++ b/public/index-pt.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/about.css" />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" href="styles/responsive.css"/>
   </head>
   <body>
     <header>
