--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/about.css" />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" href="styles/responsive.css"/>
   </head>
   <body>
     <header>
@@ -208,7 +209,7 @@
           </div>
         </section>
         <footer>
-            <div class="social">
+            <div class="social" id="social">
                 <a href="https://www.linkedin.com/in/andressa-silva99/"><img src="https://image.flaticon.com/icons/svg/733/733561.svg" alt="linkedin"></a>
                 <a href="https://github.com/AuroraDark"><img src="https://image.flaticon.com/icons/svg/733/733553.svg" alt="github"></a>
             </div>
