--- a/public/index-pt.html
+++ b/public/index-pt.html
@@ -126,7 +126,7 @@
           </div>
         </section>
         <footer>
-            <div class="social">
+            <div class="social" id="social">
                 <a href="https://www.linkedin.com/in/andressa-silva99/"><img src="https://image.flaticon.com/icons/svg/733/733561.svg" alt="linkedin"></a>
                 <a href="https://github.com/AuroraDark"><img src="https://image.flaticon.com/icons/svg/733/733553.svg" alt="github"></a>
             </div>
