--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         <div class="profile">
           <img
             class="photo"
-            src="https://image.flaticon.com/icons/svg/847/847969.svg"
+            src="https://avatars2.githubusercontent.com/u/50180949?s=460&u=492b2b9bf5fcd14e658a666af643c3089a89a863&v=4"
             alt="photo"
           />
           <h1>Andressa Silva</h1>
