--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,11 @@
       <h1 class="title">ABOUT ME</h1>
       <section class="content-about">
         <div class="profile">
-          <img
+          <!-- <img
             class="photo"
             src="https://avatars2.githubusercontent.com/u/50180949?s=460&u=492b2b9bf5fcd14e658a666af643c3089a89a863&v=4"
             alt="photo"
-          />
+          /> -->
           <h1>Andressa Silva</h1>
           <h3>Nasc: 09/12/1999</h3>
           <h2>Training</h2>
