--- a/public/index-pt.html
+++ b/public/index-pt.html
@@ -91,8 +91,8 @@
         <div class="card">
           <div class="left">
             <div class="card-info">
-              <h1>JOGO DA MEMORIA</h1>
-              <p><b>TECNOLOGIAS:</b> HTML, CSS and Javascript</p>
+              <h1>JOGO DA MEMÓRIA</h1>
+              <p><b>TECNOLOGIAS:</b> HTML, CSS e Javascript</p>
               <p><b>DATA:</b> Maio 2020</p>
             </div>
             <div class="card-links">
@@ -110,9 +110,91 @@
           </div>
           <img
             src="https://github.com/AuroraDark/jogo_da_memoria/raw/master/public/src/paginidesktop.png"
-            alt="image memory card game"
+            alt="jogo da memoria"
           />
         </div>
+
+        <div class="card">
+            <div class="left">
+              <div class="card-info">
+                <h1>PEREIRA & NUNES ADVOCACIA (CLIENTE)</h1>
+                <p><b>TECNOLOGIAS:</b> HTML, CSS e Javascript</p>
+                <p><b>DATA:</b> Junho 2020</p>
+                <p style="color: #538dbc; font-weight: bold;">*Repositório privado</p>
+              </div>
+              <div class="card-links">
+                <a 
+                  href="https://pnadvocacia.netlify.app/"
+                  target="_blank"
+                  >VER PÁGINA</a
+                >
+                <a style="background-color: #323232;"
+                class="disable"
+                  href="#"
+                  target="_blank"
+                  >VER CÓDIGO</a
+                >
+              </div>
+            </div>
+            <img
+              src="assets/pereira-nunes.png"
+              alt="pereira & nunes"
+            />
+          </div>
+  
+          <div class="card">
+            <div class="left">
+              <div class="card-info">
+                <h1>MEU PORTFÓLIO</h1>
+                <p><b>TECNOLOGIAS:</b> HTML, CSS e Javascript</p>
+                <p><b>DATA:</b> Julho 2020</p>
+              </div>
+              <div class="card-links">
+                <a
+                  href="https://andressasilva.netlify.app/"
+                  target="_blank"
+                  >VER PÁGINA</a
+                >
+                <a
+                  href="https://github.com/AuroraDark/portfolio"
+                  target="_blank"
+                  >VER CÓDIGO</a
+                >
+              </div>
+            </div>
+            <img
+              src="assets/portfolio.png"
+              alt="portfolio"
+            />
+          </div>
+  
+          <div class="card">
+            <div class="left">
+              <div class="card-info">
+                <h1>HELMAP</h1>
+                <p><b>TECNOLOGIAS:</b> HTML, CSS, Javascript Server, Node.js, SQLite e Nunjucks </p>
+                <p><b>DATA:</b> Maio 2020</p>
+                <p style="color: #538dbc; font-weight: bold;">*Ver página não está disponível</p>
+              </div>
+              <div class="card-links">
+                <a
+                style="background-color: #323232;"
+                class="disable"
+                  href="#"
+                  >VER PÁGINA</a
+                >
+                <a
+                  href="https://github.com/AuroraDark/helmap_nlw"
+                  target="_blank"
+                  >VER CÓDIGO</a
+                >
+              </div>
+            </div>
+            <img
+              src="assets/helpmap.png"
+              alt="helmap"
+            />
+          </div>
 
         <section id="contact">
           <h1 class="title">CONTATO</h1>
