--- a/public/index.html
+++ b/public/index.html
@@ -123,78 +123,82 @@
         <div class="card">
           <div class="left">
             <div class="card-info">
-              <h1>MEMORY CARD GAME</h1>
+              <h1>PEREIRA & NUNES LAW FIRM (CUSTOMER)</h1>
               <p><b>TECHNOLOGIES:</b> HTML, CSS and Javascript</p>
-              <p><b>DATE:</b> May 2020</p>
+              <p><b>DATE:</b> June 2020</p>
+              <p style="color: #538dbc; font-weight: bold;">*Private repository</p>
             </div>
             <div class="card-links">
-              <a
-                href="https://auroradark-jogodamemoria.netlify.app/"
+              <a 
+                href="https://pnadvocacia.netlify.app/"
                 target="_blank"
                 >VIEW PAGE</a
               >
-              <a
-                href="https://github.com/AuroraDark/jogo_da_memoria"
+              <a style="background-color: #323232;"
+              class="disable"
+                href="#"
                 target="_blank"
                 >VIEW CODE</a
               >
             </div>
           </div>
           <img
-            src="https://github.com/AuroraDark/jogo_da_memoria/raw/master/public/src/paginidesktop.png"
-            alt="image memory card game"
+            src="assets/pereira-nunes.png"
+            alt="pereira & nunes"
           />
         </div>
 
         <div class="card">
           <div class="left">
             <div class="card-info">
-              <h1>MEMORY CARD GAME</h1>
+              <h1>MY PORTFOLIO</h1>
               <p><b>TECHNOLOGIES:</b> HTML, CSS and Javascript</p>
-              <p><b>DATE:</b> May 2020</p>
+              <p><b>DATE:</b> July 2020</p>
             </div>
             <div class="card-links">
               <a
-                href="https://auroradark-jogodamemoria.netlify.app/"
+                href="https://andressasilva.netlify.app/"
                 target="_blank"
                 >VIEW PAGE</a
               >
               <a
-                href="https://github.com/AuroraDark/jogo_da_memoria"
+                href="https://github.com/AuroraDark/portfolio"
                 target="_blank"
                 >VIEW CODE</a
               >
             </div>
           </div>
           <img
-            src="https://github.com/AuroraDark/jogo_da_memoria/raw/master/public/src/paginidesktop.png"
-            alt="image memory card game"
+            src="assets/portfolio.png"
+            alt="portfolio"
           />
         </div>
 
         <div class="card">
           <div class="left">
             <div class="card-info">
-              <h1>MEMORY CARD GAME</h1>
-              <p><b>TECHNOLOGIES:</b> HTML, CSS and Javascript</p>
+              <h1>HELMAP</h1>
+              <p><b>TECHNOLOGIES:</b> HTML, CSS, Javascript Server, Node.js, SQLite and Nunjucks </p>
               <p><b>DATE:</b> May 2020</p>
+              <p style="color: #538dbc; font-weight: bold;">*View page not available</p>
             </div>
             <div class="card-links">
               <a
-                href="https://auroradark-jogodamemoria.netlify.app/"
-                target="_blank"
+              style="background-color: #323232;"
+              class="disable"
+                href="#"
                 >VIEW PAGE</a
               >
               <a
-                href="https://github.com/AuroraDark/jogo_da_memoria"
+                href="https://github.com/AuroraDark/helmap_nlw"
                 target="_blank"
                 >VIEW CODE</a
               >
             </div>
           </div>
           <img
-            src="https://github.com/AuroraDark/jogo_da_memoria/raw/master/public/src/paginidesktop.png"
-            alt="image memory card game"
+            src="assets/helpmap.png"
+            alt="helmap"
           />
         </div>
         <section id="contact">
