improving text profile

--- a/public/index-pt.html
+++ b/public/index-pt.html
@@ -62,9 +62,13 @@
             Atualmente foco meus aprendizados na área de desenvolvimento web. Desenvolvimento Front-End é meu ponto forte, mas também tenho conhecimentos básicos em Back-End, sendo estes nodeJS, API REST, requisições HTTP, SQL e CRUD.
           </p>
           <p>
-            Crio o design dos meus sites pelo Figma, plataforma com muitas ferramentas interessantes e 100% gratuita, mas também sou experiente no uso do Photoshop e do Illustrator. Transformo um projeto do FIGMA ou de qualquer outra plataforma de design em uma página da web, totalmente responsiva.
+            Crio o design dos meus sites pelo Figma, plataforma com muitas ferramentas interessantes e 100% gratuita, mas também sou experiente no uso do Photoshop e do Illustrator. Também posso transformar um projeto do FIGMA ou de qualquer outra plataforma de design em uma página da web, totalmente responsiva.
 
           </p>
+          <p>
+              Precisa de mais informações? <a style="text-decoration: underline;" href="#contact">Entre em contato!</a>
+          </p>
+          <p></p>
         </div>
       </section>
       <section class="technologies">
