--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,10 @@
           <p>
             I create the design of my sites with Figma, a 100% free platform
             with many interesting tools, but I am also experienced in the use of
-            Photoshop and Illustrator. I transform a figma or any other design
-            platform project into a fully responsive web page.
+            Photoshop and Illustrator. I can also turn a figma project or any other design platform into a fully responsive web page.
+          </p>
+          <p>
+            Need more information? <a style="text-decoration: underline;" href="#contact">Get in touch!</a>
           </p>
         </div>
       </section>
