--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Abel&family=Quicksand:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="https://image.flaticon.com/icons/svg/1055/1055687.svg" type="image/x-icon" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/about.css" />
