--- a/public/index-pt.html
+++ b/public/index-pt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andressa Silva</title>
+    <link rel="shortcut icon" href="https://image.flaticon.com/icons/svg/1055/1055687.svg" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Abel&family=Quicksand:wght@300;400&display=swap"
       rel="stylesheet"
