--- a/public/index-pt.html
+++ b/public/index-pt.html
@@ -25,7 +25,7 @@
         </div>
       <div class="div-header">
         <h1>ANDRESSA SILVA</h1>
-        <nav>
+        <nav id="nav">
           <a class="btn" href="#about">SOBRE</a>
           <a class="btn" href="#portfolio">PORTFÓLIO</a>
           <a class="btn" href="#contact">CONTATO</a>
