--- a/public/index-pt.html
+++ b/public/index-pt.html
@@ -122,7 +122,7 @@
         <div class="card">
             <div class="left">
               <div class="card-info">
-                <h1>PEREIRA & NUNES ADVOCACIA (CLIENTE)</h1>
+                <h1>P&N ADVOCACIA (CLIENTE)</h1>
                 <p><b>TECNOLOGIAS:</b> HTML, CSS e Javascript</p>
                 <p><b>DATA:</b> Junho 2020</p>
                 <p style="color: #538dbc; font-weight: bold;">*Repositório privado</p>
