--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
         <div class="card">
           <div class="left">
             <div class="card-info">
-              <h1>PEREIRA & NUNES LAW FIRM (CUSTOMER)</h1>
+              <h1>P&N LAW FIRM (CUSTOMER)</h1>
               <p><b>TECHNOLOGIES:</b> HTML, CSS and Javascript</p>
               <p><b>DATE:</b> June 2020</p>
               <p style="color: #538dbc; font-weight: bold;">*Private repository</p>
