--- a/public/index-pt.html
+++ b/public/index-pt.html
@@ -217,7 +217,7 @@
                 <a href="https://www.linkedin.com/in/andressa-silva99/"><img src="https://image.flaticon.com/icons/svg/733/733561.svg" alt="linkedin"></a>
                 <a href="https://github.com/AuroraDark"><img src="https://image.flaticon.com/icons/svg/733/733553.svg" alt="github"></a>
             </div>
-            <p>©Andressa Silva  2020 </p>
+            <p>Desenvolvido por Andressa Silva © Be Art  2020</p>
         </footer>
       </section>
     </section>
