--- a/public/index-pt.html
+++ b/public/index-pt.html
@@ -83,9 +83,8 @@
           <p>Angular</p>
           <p>Vue.JS</p>
           <p>node.JS</p>
-          <p>Photoshop</p>
-          <p>Illustrator</p>
-          <p>Mongodb</p>
+          <p>PHP</p>
+          <p>MySQL</p>
         </div>
       </section>
     </section>
