--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,10 @@
             Currently I focus my learning in the area of web development.
             Front-End development is my strong point, but I also have basic
             knowledge in Back-End, these being nodeJS, REST API, HTTP requests,
-            SQL and CRUD .
+            SQL and CRUD.
+          </p>
+          <p>
+            My differentials: I have knowledge in the C and Java languages, I make frequent use of git, using <a style = "text-decoration: underline;" href = "https://github.com/AuroraDark"> GitHub </a> to update my projects and I know how to use the hosting server panel tools (FTP, Database configuration and creation, integration of WordPress or others applications, etc.).
           </p>
           <p>
             I create the design of my sites with Figma, a 100% free platform
@@ -89,6 +92,8 @@
           <p>node.JS</p>
           <p>PHP</p>
           <p>MySQL</p>
+          <p>Java</p>
+          <p>C</p>
         </div>
       </section>
     </section>
