--- a/public/index-pt.html
+++ b/public/index-pt.html
@@ -63,7 +63,7 @@
             Atualmente foco meus aprendizados na área de desenvolvimento web. Desenvolvimento Front-End é meu ponto forte, mas também tenho conhecimentos básicos em Back-End, sendo estes nodeJS, API REST, requisições HTTP, SQL e CRUD.
           </p>
           <p>
-            Programo em C e Java, faço uso frequente do git, utilizando o <a style="text-decoration: underline;" href="https://github.com/AuroraDark">GitHub</a> para atualizar meus projetos e sei ultilizar as ferramentas do painel de servidores de hospedagem (FTP, Configuração e criação de Banco de Dados, integração com WordPress ou outras aplicações, e etc.). 
+           Outros: Programo em C e Java, faço uso frequente do git, utilizando o <a style="text-decoration: underline;" href="https://github.com/AuroraDark">GitHub</a> para atualizar meus projetos e sei ultilizar as ferramentas do painel de servidores de hospedagem (FTP, Configuração e criação de Banco de Dados, integração com WordPress ou outras aplicações, e etc.). 
           </p>
           <p>
             Crio o design dos meus sites pelo Figma, plataforma com muitas ferramentas interessantes e 100% gratuita, mas também sou experiente no uso do Photoshop e do Illustrator. Também posso transformar um projeto do FIGMA ou de qualquer outra plataforma de design em uma página da web, totalmente responsiva.
