--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
             SQL and CRUD.
           </p>
           <p>
-            I have knowledge in the C and Java languages, I make frequent use of git, using <a style = "text-decoration: underline;" href = "https://github.com/AuroraDark"> GitHub </a> to update my projects and I know how to use the hosting server panel tools (FTP, Database configuration and creation, integration of WordPress or others applications, etc.).
+            Others: I have knowledge in the C and Java languages, I make frequent use of git, using <a style = "text-decoration: underline;" href = "https://github.com/AuroraDark"> GitHub </a> to update my projects and I know how to use the hosting server panel tools (FTP, Database configuration and creation, integration of WordPress or others applications, etc.).
           </p>
           <p>
             I create the design of my sites with Figma, a 100% free platform
