--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,8 @@
                 Janeiro</a
               ></b
             >.
-          </h3>
+          </h3><br>
+          <a class="github" target="_blank" href="https://github.com/AuroraDark">GitHub: /AuroraDark</a>
         </div>
         <div class="text-about">
           <p>
